--- a/otp-login/src/App.css
+++ b/otp-login/src/App.css
@@ -51,7 +51,7 @@ h3 {
   border-radius: 5px;
   border: #acacac solid 1px;
   background-color: transparent;
-  color: #eee;
+  color: #757575;
   transition: 0.15s all ease;
 }
 
@@ -111,10 +111,10 @@ h3 {
   margin-top: 100px;
 }
 
-button {
+.buttons button {
   font-size: 20px;
   color: white;
-  width: 385px;
+  width: 90%;
   cursor: pointer;
   border: none;
   border-radius: 5px;
@@ -127,9 +127,10 @@ button {
 }
 
 p {
+  margin-top: 10px;
   font-size: 8px;
   font-weight: 300;
-  color: #eee;
+  color: #757575;
   margin-left: 5px;
   letter-spacing: 1px;
 }
@@ -139,7 +140,7 @@ p {
   color: #eee;
 }
 .trouble .span {
-  color: rgba(9, 89, 229, 1);
+  color: #3498db;
   font-weight: 600;
   cursor: pointer;
 }
@@ -164,18 +165,203 @@ p {
 }
 
 .right-side .btn {
-  color: #eee;
+  color: #757575;
   margin-top: 50px;
+  cursor: pointer;
 }
 
 .otp-container {
   margin-top: 10px;
-  margin-right: 150px;
-  height: 250px;
+  margin-right: 30px;
+  height: 280px;
 }
 .otp-text {
   color: #eee;
   margin-bottom: 10px;
   font-size: 18px;
   font-weight: 600;
+}
+
+.resend .resend-text {
+  color: #757575;
+  margin-bottom: 10px;
+  font-size: 12px;
+}
+
+.resend .resend-action {
+  display: flex;
+}
+
+.resend .resend-action .resend-action-text {
+  color: #757575;
+  font-size: 12px;
+  margin-top: 0;
+  margin-right: 20px;
+  font-weight: 500;
+}
+
+.resend .resend-action .resend-action-text-active {
+  color: #3498db;
+}
+
+.resend .resend-action .resend-action-text span {
+  margin-left: 7px;
+  cursor: pointer;
+}
+
+.buttons-otp {
+  margin-top: 60px;
+}
+
+.buttons-otp button {
+  font-size: 20px;
+  color: white;
+  width: 385px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  background: linear-gradient(
+    99deg,
+    rgba(9, 89, 229, 1) 0%,
+    rgba(7, 51, 168, 1) 100%
+  );
+  padding: 14px;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    max-width: 90%;
+    padding: 10px;
+  }
+
+  .left-side {
+    display: none;
+  }
+
+  .otpInput {
+    width: 40px;
+    height: 40px;
+  }
+  .otp-container {
+    margin-right: 0px;
+  }
+
+  .form-group input {
+    width: auto;
+    padding-right: 65px;
+  }
+  .buttons button {
+    width: auto;
+    padding-right: 120px;
+    padding-left: 120px;
+  }
+  p {
+    letter-spacing: 0;
+    font-size: 9px;
+  }
+
+  .buttons-otp button {
+    width: 100%;
+  }
+}
+
+/* Success Page */
+
+.success {
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--color-bg-dark);
+  border-radius: 12px;
+  height: 400px;
+  width: 400px;
+  box-shadow: 0 0 0.5px 1px hsla(0, 0%, 100%, 0.075),
+    0 0 0 1px hsla(0, 0%, 0%, 0.05), 0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
+    0 0.9px 1.5px hsla(0, 0%, 0%, 0.045), 0 3.5px 6px hsla(0, 0%, 0%, 0.09);
+}
+
+.svg {
+  width: 100px;
+  margin: 40px auto;
+}
+.path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 0;
+}
+.path.circle {
+  -webkit-animation: dash 0.9s ease-in-out;
+  animation: dash 0.9s ease-in-out;
+}
+.path.line {
+  stroke-dashoffset: 1000;
+  -webkit-animation: dash 0.9s 0.35s ease-in-out forwards;
+  animation: dash 0.9s 0.35s ease-in-out forwards;
+}
+.path.check {
+  stroke-dashoffset: -100;
+  -webkit-animation: dash-check 0.9s 0.35s ease-in-out forwards;
+  animation: dash-check 0.9s 0.35s ease-in-out forwards;
+}
+@-webkit-keyframes dash {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@-webkit-keyframes dash-check {
+  0% {
+    stroke-dashoffset: -100;
+  }
+  100% {
+    stroke-dashoffset: 900;
+  }
+}
+@keyframes dash-check {
+  0% {
+    stroke-dashoffset: -100;
+  }
+  100% {
+    stroke-dashoffset: 900;
+  }
+}
+
+.login-success {
+  margin: 20px;
+  font-size: 1.25em;
+  color: #73af55;
+}
+
+.btn-success {
+  margin-top: 60px;
+}
+
+.logout {
+  text-decoration: none;
+  font-size: 18px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  background-color: #ef0107;
+  width: 60%;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+  .success {
+    width: 90%;
+  }
 }
